--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,11 @@ body {
 .banner {
   background-image: url(../resources/Banner\ Image.png);
   background-repeat: no-repeat;
-  padding: 50px 140px 1000px 140px;
-  margin: 50px 0px 150px 140px;
+  padding: 50px 40px 1000px 40px;
+  margin: 50px 0px 20px 110px;
   border-radius: 16px;
   color: #070211;
+  align-items: center;
 }
 
 .firt-paragraph {
