--- a/styles/style.css
+++ b/styles/style.css
@@ -73,12 +73,13 @@ body {
 .welcome {
   background-image: url(../resources/Vectorrr.png);
   background-repeat: no-repeat;
-  padding: 50px 40px 1000px 40px;
-  margin: 50px 0px 20px 110px;
+  padding: 70px 40px 1000px 40px;
+  margin: 150px 0px 20px 110px;
   border-radius: 16px;
   color: #070211;
   align-items: center;
   display: flex;
+  fill: linear-gradient(90deg, #070211);
 }
 .wel {
   color: #fff;
@@ -88,6 +89,7 @@ body {
   font-weight: 900;
   line-height: 88px;
   letter-spacing: 7.04px;
+  /* padding: 10px 0px; */
 }
 .doll {
   color: rgba(255, 255, 255, 0.8);
@@ -96,6 +98,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
+  /* padding: 0px 0px; */
 }
 .wellbtn {
   color: #fff;
@@ -106,9 +109,13 @@ body {
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  background-color: #070211;
+  border: none;
+  background: none;
+  margin: 28px 22px;
 }
 .gpsav{
-  padding: auto;
-  /* display: flex; */
+  padding: 0px 0px 0px 110px;
+}
+.div1{
+  margin: 1px 20px 0px 0px;
 }
