--- a/styles/style.css
+++ b/styles/style.css
@@ -295,3 +295,25 @@ body {
   font-weight: 400;
   line-height: 32px; /* 160% */
 }
+.bsbs input {
+  border-radius: 50px 0px 0px 50px;
+  background: #fff;
+  outline: none;
+  font-size: 20px;
+  font-weight: 400;
+  border: none;
+  padding: 15px 20px;
+}
+.bsbs button {
+  border-radius: 0px 50px 50px 0px;
+  background: #f00;
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  padding: 15px 20px;
+  outline: none;
+  border: none;
+  margin: -5px;
+  text-transform: capitalize;
+}
