--- a/styles/style.css
+++ b/styles/style.css
@@ -317,3 +317,35 @@ body {
   margin: -5px;
   text-transform: capitalize;
 }
+
+.newslatter {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: rgba(255, 0, 0, 0.1);
+  padding: 100px;
+  margin: 100px 50px 50px 80px;
+  border-radius: 10px;
+}
+
+.newslatter h1 {
+  color: #070211;
+  text-align: center;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.newslatter p {
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+}
